# research_prime_vfv

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  Makefile  README.md  pyproject.toml
data/: .gitignore  README.md  openssf_scorecard.csv  prime_imagemagick_issue_spoilage.csv  vfv_imagemagick_commits.csv  vfv_imagemagick_commits_per_year.csv  vfv_imagemagick_cwes_per_year.csv  vfv_imagemagick_issues.csv  vfv_imagemagick_pull-requests.csv  vfv_imagemagick_time_between_commits.csv  vfv_repositories_cwe_cve.json
data/cves/: README.md
data/openssf_scorecard/: aircrack-ng_aircrack-ng.json  andrerenaud_pdfgen.json  antirez_redis.json  apple_cups.json  appneta_tcpreplay.json  armmbed_mbedtls.json  bonzini_qemu.json  chromium_chromium.json  collectd_collectd.json  dbry_wavpack.json  domoticz_domoticz.json  dosfstools_dosfstools.json  erikd_libsndfile.json  espruino_espruino.json  ffmpeg_ffmpeg.json  file_file.json  git_git.json  glensc_file.json  gnome_libxml2.json  gpac_gpac.json  hoene_libmysofa.json  imagemagick_imagemagick.json  imagemagick_imagemagick6.json  ivmai_bdwgc.json  kkos_oniguruma.json  libarchive_libarchive.json  libav_libav.json  libgd_libgd.json  libgit2_libgit2.json  libimobiledevice_libplist.json  libraw_libraw-demosaic-pack-gpl2.json  libreswan_libreswan.json  lxc_lxc.json  mapserver_mapserver.json  mdadams_jasper.json  memcached_memcached.json  miniupnp_miniupnp.json  miniupnp_ngiflib.json  mm2_little-cms.json  mruby_mruby.json  (+26 more)
data/scripts/: openssf_scorecard.bash  prime_imagemagick_issue_spoilage.py  vfv_imagemagick_commits_per_year.py  vfv_imagemagick_cwes_per_year.py  vfv_imagemagick_time_between_commits.py
data/vfv/: Data_Collection.ipynb  Data_Process_FullyCleaned.ipynb  README.md
figures/figA/: README.md  figA.py  plot.py
figures/figB/: README.md  plot.py
figures/figC/: README.md  plot.py
figures/figD/: README.md  plot.py
figures/figE/: README.md  plot.py
figures/figH/: plot.py
figures/figI/: plot.py
figures/figJ/: plot.py
figures/figK/: plot.py
figures/figL/: plot.py
figures/figM/: plot.py
figures/figN/: plot.py
scripts/: clone_vfv_repos.bash  download_cwe_list_4.17.bash  extract_repos_from_vfv.py  get_repos.py  get_vfv_repos.bash  git_urls.txt
scripts/0-download-data/: clone_vfv_repos.bash  download_cwe_list_4.17.bash  extract_repos_from_vfv.py
scripts/1-openssf-scorecard-vfv/: README.md  compute_openssf_score.bash
(+7 files in other folders)
